Bug 662170 - Navigating to anchor '#' should scroll to top of the page. r=bz